feat(phase2-5): Implement REST Docs and Swagger/OpenAPI
Module 1: Spring REST Docs
- Add spring-restdocs-mockmvc dependency
- Add asciidoctor-gradle-plugin for HTML generation
- Create PostControllerRestDocsTest (7 API tests)
- Create index.adoc with API documentation structure
- Generate HTML documentation in build/docs/asciidoc/

Module 2: Swagger/OpenAPI Integration
- Add springdoc-openapi-starter-webmvc-ui 2.6.0
- Create SwaggerConfig with OpenAPI 3.1 spec
- Add @Tag and @Operation annotations to PostController
- Add @Schema annotations to DTOs (PostRequest, PostResponse)
- Convert DTOs to Record type with toEntity() and from() methods

Compatibility Fixes:
- Downgrade Spring Boot 3.4.12 → 3.3.5 (springdoc compatibility)
- Fix Record accessor pattern (getTitle() → title())
- Add PostResponse.from() static factory method
- Update Post.update() to accept 3 parameters (title, content, author)
- Add findByTitleContaining() to PostRepository

Test Results:
- PostRepositoryTest: 7/7 passed (100%)
- PostServiceTest: 10/10 passed (100%)
- PostControllerTest: 8/8 passed (100%)
- PostControllerRestDocsTest: 7/7 passed (100%)
- Total: 32/32 tests passed (100%)

API Documentation:
- REST Docs HTML: build/docs/asciidoc/index.html
- Swagger UI: http://localhost:8080/swagger-ui/index.html
- OpenAPI Spec: http://localhost:8080/v3/api-docs

Files Changed:
- build.gradle
- SwaggerConfig.java (NEW)
- PostController.java (Swagger annotations)
- PostRequest.java (Record + toEntity)
- PostResponse.java (Record + from)
- Post.java (update method)
- PostRepository.java (search method)
- PostControllerRestDocsTest.java (NEW)
- index.adoc (NEW)