@@ -9,8 +9,10 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
+/**
+ * 게시글 비즈니스 로직을 처리하는 서비스
+ */
 @Service
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
@@ -18,62 +20,80 @@ public class PostService {
 
     private final PostRepository postRepository;
 
-    // 전체 포스트 조회
+    /**
+     * 모든 게시글 조회
+     */
     public List<PostResponse> getAllPosts() {
         return postRepository.findAll().stream()
                 .map(PostResponse::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    // ID로 포스트 조회
+    /**
+     * ID로 게시글 조회
+     */
     public PostResponse getPostById(Long id) {
         Post post = postRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Post not found with id: " + id));
         return PostResponse.from(post);
     }
 
-    // 포스트 생성
+    /**
+     * 게시글 생성
+     */
     @Transactional
     public PostResponse createPost(PostRequest request) {
-        Post post = Post.builder()
-                .title(request.getTitle())
-                .content(request.getContent())
-                .author(request.getAuthor())
-                .build();
-
+        // ✨ request.toEntity() 사용
+        Post post = request.toEntity();
         Post savedPost = postRepository.save(post);
         return PostResponse.from(savedPost);
     }
 
-    // 포스트 수정
+    /**
+     * 게시글 수정
+     */
     @Transactional
     public PostResponse updatePost(Long id, PostRequest request) {
         Post post = postRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Post not found with id: " + id));
 
-        post.update(request.getTitle(), request.getContent());
+        // ✨ record 접근자 사용: title(), content(), author()
+        post.update(
+                request.title(),
+                request.content(),
+                request.author()
+        );
+
         return PostResponse.from(post);
     }
 
-    // 포스트 삭제
+    /**
+     * 게시글 삭제
+     */
     @Transactional
     public void deletePost(Long id) {
-        Post post = postRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Post not found with id: " + id));
-        postRepository.delete(post);
+        if (!postRepository.existsById(id)) {
+            throw new RuntimeException("Post not found with id: " + id);
+        }
+        postRepository.deleteById(id);
     }
 
-    // 제목으로 검색
-    public List<PostResponse> searchByTitle(String title) {
-        return postRepository.findByTitleContaining(title).stream()
+    /**
+     * 제목으로 게시글 검색
+     */
+    public List<PostResponse> searchByTitle(String keyword) {
+        // ✨ findByTitleContaining 사용 (IgnoreCase 제거)
+        return postRepository.findByTitleContaining(keyword).stream()
                 .map(PostResponse::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    // 작성자로 검색
+    /**
+     * 작성자로 게시글 검색
+     */
     public List<PostResponse> getPostsByAuthor(String author) {
         return postRepository.findByAuthor(author).stream()
                 .map(PostResponse::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
